--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <meta name="description" content="Experience luxury with EliteMotion's premium vehicle rentals. Mercedes, Range Rover, Lexus and more." />
     <meta name="author" content="EliteMotion" />
 
+    <!-- Google fonts -->
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+
     <meta property="og:title" content="EliteMotion Car Hire - Premium Car Rentals" />
     <meta property="og:description" content="Experience luxury with our curated fleet of premium vehicles" />
     <meta property="og:type" content="website" />
