--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EliteMotion Car Hire - Premium Self-Drive and Chauffeured Car Rentals</title>
-    <meta name="description" content="Experience luxury with EliteMotion's premium vehicle rentals. Mercedes, Range Rover, Lexus and more." />
-    <meta name="author" content="EliteMotion" />
+    <title>Jobunya Car Hire - Premium Self-Drive and Chauffeured Car Rentals</title>
+    <meta name="description" content="Experience luxury with Jobunya's premium vehicle rentals. Mercedes, Range Rover, Lexus and more." />
+    <meta name="author" content="Jobunya" />
 
     <!-- Google fonts -->
      <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,13 +15,13 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="EliteMotion Car Hire - Premium Car Rentals" />
+    <meta property="og:title" content="Jobunya Car Hire - Premium Car Rentals" />
     <meta property="og:description" content="Experience luxury with our curated fleet of premium vehicles" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@elitemotion" />
+    <meta name="twitter:site" content="@Jobunya" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
