--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <meta property="og:title" content="Jobunya Car Hire - Premium Car Rentals" />
     <meta property="og:description" content="Experience luxury with our curated fleet of premium vehicles" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@Jobunya" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="" />
   </head>
 
   <body>
