style:theme changed to match the brand

--- a/index.html
+++ b/index.html
@@ -1,25 +1,81 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- ✅ Basic SEO -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jobunya Car Hire - Premium Self-Drive and Chauffeured Car Rentals</title>
-    <meta name="description" content="Experience luxury with Jobunya's premium vehicle rentals. Mercedes, Range Rover, Lexus and more." />
+    <title>Jobunya Car Rentals | Rent.Drive.Explore</title>
+    <meta
+      name="description"
+      content="Experience luxury and comfort with Jobunya Car Rentals. Choose from a premium fleet of Mercedes, Range Rover, Lexus, and more for self-drive or chauffeured experiences."
+    />
     <meta name="author" content="Jobunya" />
+    <meta name="keywords" content="car hire, luxury car rental, self drive, chauffeured cars, Nairobi car rentals, Mercedes, Range Rover, Lexus" />
+    <meta name="robots" content="index, follow" />
 
-    <!-- Google fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <!-- ✅ Canonical link -->
+    <link rel="canonical" href="https://www.jobunyacarrentals.co.ke/" />
 
-    <meta property="og:title" content="Jobunya Car Hire - Premium Car Rentals" />
-    <meta property="og:description" content="Experience luxury with our curated fleet of premium vehicles" />
+    <!-- ✅ Favicon -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/logo.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/logo.png" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+
+    <!-- ✅ Theme color (for mobile browsers) -->
+    <meta name="theme-color" content="#0000a6" />
+
+    <!-- ✅ Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Inter:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- ✅ Open Graph (Facebook, LinkedIn) -->
+    <meta property="og:title" content="Jobunya Car Rentals | Rent.Drive.Explore" />
+    <meta
+      property="og:description"
+      content="Drive luxury with Jobunya Car Hire. Explore our premium fleet — Mercedes, Range Rover, Lexus, and more."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="" />
+    <meta property="og:url" content="https://www.jobunyacarrentals.co.ke/" />
+    <meta property="og:image" content="https://www.jobunyacarrentals.co.ke/logo.png" />
+    <meta property="og:site_name" content="Jobunya Car Rentals" />
 
+    <!-- ✅ Twitter Cards -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Jobunya" />
-    <meta name="twitter:image" content="" />
+    <meta name="twitter:creator" content="@Jobunya" />
+    <meta name="twitter:title" content="Jobunya Car Rentals | Rent.Drive.Explore" />
+    <meta
+      name="twitter:description"
+      content="Experience premium self-drive and chauffeured car rentals with Jobunya Car Rentals."
+    />
+    <meta name="twitter:image" content="https://www.jobunyacarrentals.co.ke/logo.png" />
+
+    <!-- ✅ Structured Data for Google Rich Results -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "CarRental",
+        "name": "Jobunya Car Hire",
+        "url": "https://www.jobunyacarrentals.co.ke/",
+        "logo": "https://www.jobunyacarrentals.co.ke/logo.png",
+        "sameAs": [
+          "https://www.facebook.com/jobunya",
+          "https://www.instagram.com/jobunya",
+          "https://twitter.com/Jobunya"
+        ],
+        "description": "Luxury car rental services offering premium vehicles for self-drive and chauffeur experiences.",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Nairobi",
+          "addressCountry": "KE"
+        },
+        "telephone": "+254723565952"
+      }
+    </script>
   </head>
 
   <body>
