--- a/index.html
+++ b/index.html
@@ -59,13 +59,11 @@
       {
         "@context": "https://schema.org",
         "@type": "CarRental",
-        "name": "Jobunya Car Hire",
+        "name": "Jobunya Car Rentals",
         "url": "https://www.jobunyacarrentals.co.ke/",
         "logo": "https://www.jobunyacarrentals.co.ke/logo.png",
         "sameAs": [
-          "https://www.facebook.com/jobunya",
-          "https://www.instagram.com/jobunya",
-          "https://twitter.com/Jobunya"
+          "https://www.facebook.com/p/Jobunya-Car-Rentals-61576418253226/",
         ],
         "description": "Luxury car rental services offering premium vehicles for self-drive and chauffeur experiences.",
         "address": {
